[package]
name = "rustbrush_gui"
version = "0.1.0"
edition = "2021"

[dependencies]

# our crates
rustbrush_utils = { path = "../rustbrush_utils" }

# windowing and gui
eframe = "0.30.0"

# logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# image saving/loading
image = "0.25.5"

